--- a/deployment.yaml
+++ b/deployment.yaml
@@ -18,7 +18,7 @@ spec:
       containers:
       - image: jmugu/test:7
         name: test
-        containerPorts: 80
+        containerPort: 80
         resources: {}
 status: {}
 ---
